plugins {
    id 'application'
    id 'java'
    id 'eclipse'
}

description = 'Примеры классов для изучения основ Java SE'
group = 'ru.lionsoft'
version = '1.0-SNAPSHOT'

mainClassName = 'ru.lionsoft.javase.hello.HelloApp'

//compileJava.options.encoding = "UTF-8"
//compileTestJava.options.encoding = "UTF-8"

ext.license = file("${rootDir}/licenseheader.txt") 

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': "${mainClassName}"
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = 13
    targetCompatibility = 13
//    options.compilerArgs += "-parameters"
    options.compilerArgs += "--release"
    options.compilerArgs += "13"
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    systemProperty "file.encoding", "utf-8"
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    systemProperty "file.encoding", "utf-8"
    jvmArgs += "--enable-preview"
}

//tasks.withType(JavaCompile).each {
//    it.options.compilerArgs.add('--enable-preview')
//}

dependencies {
    /* ########### JAXB ############ */

    // JAXB API
    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'

    // JAXB Runtime
    // https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime
    compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'

    // JAXB Core (XJC, JXC and Runtime modules)
    // https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-core
    //compile group: 'org.glassfish.jaxb', name: 'jaxb-core', version: '2.3.0.1'
    
    /* ########### JSON-P/B ############ */

    // JSON-P API
    // https://mvnrepository.com/artifact/javax.json/javax.json-api
    compile group: 'javax.json', name: 'javax.json-api', version: '1.1.4'

    // Glassfish JSON-P Provider
    // https://mvnrepository.com/artifact/org.glassfish/javax.json
    compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'

    // JSON-B API
    // https://mvnrepository.com/artifact/javax.json.bind/javax.json.bind-api
    compile group: 'javax.json.bind', name: 'javax.json.bind-api', version: '1.0'
    
    // Yasson JSON-B Provider
    // https://mvnrepository.com/artifact/org.eclipse/yasson
    compile group: 'org.eclipse', name: 'yasson', version: '1.0.5'
    
    /* ########### JDBC Driver ############ */
    
    // Apache Derby JDBC Driver
    // https://mvnrepository.com/artifact/org.apache.derby/derbyclient
    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.14.2.0'

    // PostgreSQL JDBC Driver
    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.10'

    // Oracle JDBC Driver
    // https://mvnrepository.com/artifact/oracle/oracle-jdbc
//    compile group: 'oracle', name: 'oracle-jdbc', version: '12.1.0.2'

    /* ########### JPA ############ */
 
    // JPA API
    // https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
    
    // EclipseLink JPA Provider
    // https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa
    compile group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.5'


    // ############ Benchmark ################
    
    // JMH
    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
    compile group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.23'

    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-generator-annprocess
    compile group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.23'

    
    /* ############ Test ############## */
    // JUnit
    testCompile 'junit:junit:4.12'
    
    // TestNG
    // https://mvnrepository.com/artifact/org.testng/testng
    testCompile group: 'org.testng', name: 'testng', version: '7.0.0'

}
